[gd_scene load_steps=3 format=2]

[ext_resource path="res://Pawn/Player/Input/InputHandler.gd" type="Script" id=1]
[ext_resource path="res://Pawn/Player/Input/joypad_diagram.tscn" type="PackedScene" id=2]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Joypads" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoypadDiagram" parent="Joypads" instance=ExtResource( 2 )]
position = Vector2( -399.848, 86.2723 )
scale = Vector2( 0.5, 0.5 )

[node name="JoypadDiagramMapped" parent="Joypads" instance=ExtResource( 2 )]
position = Vector2( 396.713, 88.7963 )
scale = Vector2( 0.5, 0.5 )

[node name="Axes" type="VBoxContainer" parent="Joypads"]
margin_left = -267.477
margin_top = 30.1606
margin_right = -7.47711
margin_bottom = 140.161
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/Axes"]
margin_right = 260.0
margin_bottom = 14.0
text = "input"
align = 1
valign = 1

[node name="Axis0" type="HBoxContainer" parent="Joypads/Axes"]
margin_top = 18.0
margin_right = 260.0
margin_bottom = 38.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/Axes/Axis0"]
margin_right = 57.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "LS Axis X"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Joypads/Axes/Axis0"]
margin_left = 61.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Joypads/Axes/Axis0/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.18921
margin_right = 1.18921
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis1" type="HBoxContainer" parent="Joypads/Axes"]
margin_top = 42.0
margin_right = 260.0
margin_bottom = 62.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/Axes/Axis1"]
margin_right = 56.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "LS Axis Y"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Joypads/Axes/Axis1"]
margin_left = 60.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Joypads/Axes/Axis1/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis2" type="HBoxContainer" parent="Joypads/Axes"]
margin_top = 66.0
margin_right = 260.0
margin_bottom = 86.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/Axes/Axis2"]
margin_right = 58.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "RS Axis X"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Joypads/Axes/Axis2"]
margin_left = 62.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Joypads/Axes/Axis2/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis3" type="HBoxContainer" parent="Joypads/Axes"]
margin_top = 90.0
margin_right = 260.0
margin_bottom = 110.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/Axes/Axis3"]
margin_right = 57.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "RS Axis Y"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Joypads/Axes/Axis3"]
margin_left = 61.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Joypads/Axes/Axis3/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AxesMapped" type="VBoxContainer" parent="Joypads"]
margin_left = 8.52292
margin_top = 30.1606
margin_right = 268.523
margin_bottom = 140.161
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/AxesMapped"]
margin_right = 260.0
margin_bottom = 14.0
text = "mapped"
align = 1
valign = 1

[node name="Axis0" type="HBoxContainer" parent="Joypads/AxesMapped"]
margin_top = 18.0
margin_right = 260.0
margin_bottom = 38.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/AxesMapped/Axis0"]
margin_right = 57.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "LS Axis X"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Joypads/AxesMapped/Axis0"]
margin_left = 61.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Joypads/AxesMapped/Axis0/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis1" type="HBoxContainer" parent="Joypads/AxesMapped"]
margin_top = 42.0
margin_right = 260.0
margin_bottom = 62.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/AxesMapped/Axis1"]
margin_right = 56.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "LS Axis Y"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Joypads/AxesMapped/Axis1"]
margin_left = 60.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Joypads/AxesMapped/Axis1/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis2" type="HBoxContainer" parent="Joypads/AxesMapped"]
margin_top = 66.0
margin_right = 260.0
margin_bottom = 86.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/AxesMapped/Axis2"]
margin_right = 58.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "RS Axis X"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Joypads/AxesMapped/Axis2"]
margin_left = 62.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Joypads/AxesMapped/Axis2/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Axis3" type="HBoxContainer" parent="Joypads/AxesMapped"]
margin_top = 90.0
margin_right = 260.0
margin_bottom = 110.0
rect_min_size = Vector2( 260, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Joypads/AxesMapped/Axis3"]
margin_right = 57.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 1
text = "RS Axis Y"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Joypads/AxesMapped/Axis3"]
margin_left = 61.0
margin_right = 260.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
step = 0.0001
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Joypads/AxesMapped/Axis3/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
